--- a/VRChat/54/1218554.html
+++ b/VRChat/54/1218554.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/caabce76a16a06cb0535.js" defer=
+    "https://asset.booth.pm/assets/64e3f7d917c54e844730.js" defer=
     "defer" nonce=
-    "hyhM2uPOWK4iU8DyDU7BakkE7dKP9kNG1xtLI0n3PSc="></script>
+    "UpL3pJElnkA3DvX1gtW3+tl2FEl5OTYyovAWS/CYKfw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"頭巾","description":"【製品内容】\n・UnityPackage\n・利用規約\n\n\n【説明】\nキャラの頭につける頭巾です。\n\n頭巾　三角面:320ポリゴン\n\n\n\n【免責事項】\n当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。\n\n\n【禁止事項】\n・再配布（ゲームに組み込む・VRCのペデスタル等は許可）\n・政治的、差別的な用途への利用、又は過去にそのような用途に扱われた経歴のあるキャラクターへの利用","url":"https://booth.pm/ja/items/1218554","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/8af5d090-df4c-4849-965f-b38941abdc0c/i/1218554/68af08bd-5002-43bc-a559-188b8d35b12c_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hyhM2uPOWK4iU8DyDU7BakkE7dKP9kNG1xtLI0n3PSc="></script>
+    nonce="UpL3pJElnkA3DvX1gtW3+tl2FEl5OTYyovAWS/CYKfw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -165,7 +165,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              98
+                              97
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -180,7 +180,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              98
+                              97
                             </div>
                           </div></a>
                         </div>
@@ -521,7 +521,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;}]"
+    "[{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
